# GameBoy_Emulator

./: CMakeLists.txt  README.md
backup/GameBoy_Emulator-main/GameBoy_Emulator-main/: CMakeLists.txt  compile.ps1
backup/GameBoy_Emulator-main/GameBoy_Emulator-main/include/: apu.h  cpu.h  mmu.h
backup/GameBoy_Emulator-main/GameBoy_Emulator-main/src/: DEBUG_NOTES.md  FLAG_VERIFICATION.md  cpu.cpp  cpu_instructions.cpp  emulator.cpp
include/: apu.h  background_renderer.h  cpu.h  emulator.h  lcd_controller.h  mmu.h  ppu.h  sprite_renderer.h
src/: apu.cpp  cpu.cpp  cpu_alu.cpp  cpu_bits.cpp  cpu_cb.cpp  cpu_rotate.cpp  debug_tools.rs  emulator.cpp  lib.rs  main.rs  mmu.cpp  mod.rs  ppu.cpp
src/GB/: BUS.rs  CPU.rs  bus_apu.rs  bus_io.rs  bus_mem.rs  instructions.rs  mod.rs  registers.rs  types.rs
src/apu/: apu.cpp
src/core/: basic_function_test.rs  cycles.rs  emulator.cpp  error.rs  mod.rs  rom_header.rs
src/core/audio/: apu.rs  channel.rs  mod.rs
src/core/cpu/: arithmetic.rs  bit.rs  cb.rs  control.rs  cpu.rs  cpu_impl.rs  cpu_impl.rs.new  cycles.rs  decode_and_execute.rs  io.rs  jump.rs  load.rs  logic.rs  mod.rs  new_mod.rs  register_target.rs  registers.rs  registers.rs.new  stack.rs  timer.rs  undocumented.rs
src/core/cpu/flags/: mod.rs
src/core/cpu/instructions/: arithmetic.rs  bit.rs  bits.rs  call.rs  control.rs  jump.rs  load.rs  logic.rs  mod.rs  prelude.rs  register_utils.rs
src/core/mmu/: error.rs  lcd_registers.rs  mbc5.rs  mmu.rs  mod.rs
src/core/mmu/mbc/: mbc1.rs
src/core/ppu/: background.rs  display.rs  mod.rs  pixel.rs  ppu.rs  sprite.rs  vram.rs
src/core/timer/: timer.rs
src/cpu/: cpu.cpp  cpu_alu.cpp  cpu_cb.cpp  cpu_flags.cpp  cpu_instructions.cpp  cpu_interrupt.cpp
src/error/: hardware.rs  mod.rs
src/interface/: audio.rs  mock_display.rs  mod.rs  sdl3_audio.rs  sdl3_display.rs  video.rs
src/interface/input/: joypad.rs
src/mmu/: MBC.cpp  MBC.h  Timer.cpp  Timer.h  mmu.cpp  mmu.h
src/ppu/: background_renderer.cpp  lcd_controller.cpp  ppu.cpp  sprite_renderer.cpp
src/utils/: logger.rs  mod.rs  rom_check.rs
src/utils/config/: colors.rs
